--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,7 @@
 .App {
-    
+    background: #c2c2c2;
+    padding: 16px;
+    border: 4px solid #999;
+    border-left-color: white;
+    border-top-color: white;
 }
